--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Your Next Read</title>
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/29/29302.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div id="root"></div>
